--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -35,7 +35,7 @@ to create access tokens, fetch the latest images and build custom automations on
 
 {/* steps can't be indented due to prettier */}
 
-1. Set Up Your [Registry](/docs/product/registry/)
+1. Set Up Your [Registry](/docs/guides/container-registry/)
 2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
 3. White-label the [Customer portal](/docs/product/branding/)
 4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
