--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -42,9 +42,10 @@ One of the most common sources of confusion is the distinction between a **regis
 For example:
 
 - **Registry**: `registry.example.com`
-- **Repository**: `registry.example.com/my-app`
-- **Image with tag**: `registry.example.com/my-app:v1.2.0`
-- **Image with digest**: `registry.example.com/my-app@sha256:abc123...`
+- **Repository**: `registry.example.com/my-repository`
+- **Application (Image)**: `registry.example.com/my-repository/my-app`
+- **Application (Image) with tag**: `registry.example.com/my-repository/my-app:v1.2.0`
+- **Application (Image) with digest**: `registry.example.com/my-repository/my-app@sha256:abc123...`
 
 ## How Container Registries Work
 
