--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -43,7 +43,7 @@ are running the same version of the infrastructure and application.
 
 {/* steps can't be indented due to prettier */}
 
-1. Set Up Your [Registry](/docs/product/registry/)
+1. Set Up Your [Registry](/docs/guides/container-registry/)
 2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
 3. White-label the [Customer portal](/docs/product/branding/)
 4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
