--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -304,7 +304,7 @@ Container registries are essential in modern CI/CD workflows:
 
 **Example with Docker:**
 
-```bash
+```shell
 # Build and tag image
 docker build -t registry.example.com/myapp:${VERSION} .
 
