--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -551,7 +551,7 @@ Docker Hub is a public registry where anyone can pull images (rate limits apply)
 
 ### How much does a container registry cost?
 
-Costs vary widely. Docker Hub offers limited free public repositories. Cloud provider registries (ECR, ACR, GAR) charge based on storage ($0.10/GB/month typical) and bandwidth. Self-hosted registries have server/infrastructure costs but no per-GB fees. Enterprise registries like JFrog Artifactory have license fees. [Distr](/blog/container-image-registry-comparison/) offers free open-source and paid managed options.
+Costs vary widely. Docker Hub offers limited free public repositories. Cloud provider registries (ECR, ACR, GAR) charge based on storage ($0.10/GB/month typical) and bandwidth. Self-hosted registries have server/infrastructure costs but no per-GB fees. Enterprise registries like JFrog Artifactory have license fees. [Distr](/pricing/) offers free open-source and paid managed options.
 
 ### Can I run a registry on-premises or in an air-gapped environment?
 
