--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -278,7 +278,7 @@ External customers expect self-service portals where they can view available ima
 
 ### Purpose-Built Registries for External Distribution
 
-While registries like [Docker Hub, Harbor, JFrog Artifactory, and cloud provider registries](/blog/container-image-registry-comparison/) work well for internal use, specialized platforms like [Distr](/blog/container-image-registry-comparison/) are designed specifically for software vendors distributing to external customers.
+While registries like [Docker Hub, Harbor, JFrog Artifactory, and cloud provider registries](/blog/container-image-registry-comparison/) work well for internal use, specialized platforms like [Distr](/docs/) are designed specifically for software vendors distributing to external customers.
 
 **Key capabilities for customer-facing distribution:**
 
