--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -567,7 +567,7 @@ Cloud-hosted registries (AWS ECR, Azure ACR, Distr) offer minimal operational ov
 
 ### What is the best registry for software vendors distributing to customers?
 
-Software vendors distributing commercial applications to external customers should use purpose-built registries like [Distr](/blog/container-image-registry-comparison/) that provide customer-specific access controls, usage analytics, license management, and support for self-managed and [air-gapped](/glossary/air-gapped-meaning/) customer deployments. Standard internal registries lack these customer-facing capabilities.
+Software vendors distributing commercial applications to external customers should use purpose-built registries like [Distr](/docs/product/registry/) that provide customer-specific access controls, usage analytics, license management, and support for self-managed and [air-gapped](/glossary/air-gapped-meaning/) customer deployments. Standard internal registries lack these customer-facing capabilities.
 
 ---
 
