--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -115,7 +115,7 @@ Container registries fall into two primary categories based on access control:
 
 - **Cloud-hosted private registries** - AWS ECR, Azure ACR, Google Artifact Registry
 - **Self-hosted registries** - Harbor, Distribution (Docker Registry), Gitea
-- **Commercial registries** - JFrog Artifactory, Cloudsmith, [Distr](/blog/container-image-registry-comparison/)
+- **Commercial registries** - JFrog Artifactory, Cloudsmith, [Distr](/docs/product/registry/)
 
 **Use cases for private registries:**
 
