chore: apply comments
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/glossary/software-distribution-platform.mdx
+++ b/src/content/glossary/software-distribution-platform.mdx
@@ -124,7 +124,7 @@ Enforce commercial terms across distributed installations:
 - Control feature access based on subscription tier
 - Enforce seat limits or usage quotas
 - Set license expiration dates
-- Revoke access when subscriptions ends
+- Revoke access when subscription ends
 - Tag-based access control (customer sees only "production" tags, not "beta")
 
 ### Multi-Environment Deployment Support
