--- a/src/content/blog/container-image-registry-comparison.mdx
+++ b/src/content/blog/container-image-registry-comparison.mdx
@@ -63,7 +63,7 @@ A growing trend is using ORAS to package and store non-OCI-native formats, like 
 
 For example, you can push a machine learning model like this:
 
-```bash
+```shell
 oras push registry.distr.sh/my-org/ml-model:0.0.1 ./model.pkl:application/vnd.myorg.model
 ```
 
