--- a/src/content/glossary/sbom-software-bill-of-materials.mdx
+++ b/src/content/glossary/sbom-software-bill-of-materials.mdx
@@ -64,7 +64,7 @@ SBOMs can be generated using various tools and methods. Here are some commonly u
 
 Here are some examples of how to generate SBOMs using these tools:
 
-```bash
+```shell
 # Using Syft for container images and filesystems
 syft alpine:latest -o cyclonedx-json > alpine-sbom.json
 
