--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -38,7 +38,7 @@ Before you can push or pull artifacts, you must configure a registry slug at the
 
 Generate a [Personal Access Token (PAT)](/docs/integrations/personal-access-token/) in your Distr account. Use this token to log in to the registry:
 
-```bash
+```shell
 echo "YOUR-ACCESS-TOKEN" | docker login registry.distr.sh:8585 --password-stdin -u -
 ```
 
@@ -56,7 +56,7 @@ Before uploading, you need to tag your artifact using the correct registry slug 
 
 You can try it with a sample image:
 
-```bash
+```shell
 docker pull hello-world
 docker tag hello-world registry.distr.sh/slug/hello-world:1.0.0
 docker push registry.distr.sh/slug/hello-world:1.0.0
