docs: add application links
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -22,6 +22,7 @@ Start with these essential guides to set up your first applications and customer
 Configure your applications and customize the deployment experience:
 
 - **[Configure Docker Environment Variables](/docs/guides/docker-env-var-template/)** - Create customizable environment variable templates for Docker apps
+- **[Configure Application Links](/docs/guides/application-links/)** - Create dynamic links to deployed applications using template variables
 - **[Configuring Helm Charts for Distr](/docs/guides/helm-chart-registry-auth/)** - Set up authenticated image pulls with imagePullSecrets
 
 ## Customer Management
