docs: update deployment guides with new flow and fix image references
- Update end-customer-registry-view guide to match new create-deployment flow
- Add new deployment screenshots for customer portal
- Fix misspelled image reference (kubernets -> kubernetes_version_manage.png)
- Update create-deployment and create-application guides
- Add new deployment creation guides with step-by-step instructions

--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -46,7 +46,7 @@ To access these tutorials:
 
 Upon completion, you'll be ready to:
 
-1. **Onboard Your Own Applications:** Add your [Docker Compose](/docs/guides/onboarding-a-docker-app/) or [Helm chart-based applications](/docs/guides/onboarding-a-helm-app/) to Distr
+1. **Create Your Own Applications:** Add your [Docker Compose or Helm chart-based applications](/docs/guides/create-application/) to Distr
 2. **Push Your Artifacts:** Store your artifacts in your private [registry](/docs/product/registry/)
 3. **Invite Customers:** Invite new [customers](/docs/product/rbac/#inviting-customer-organization-users) into your organization
 
