--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -2,7 +2,7 @@
 title: Run Distr Agents on macOS
 description: To run Distr on macOS, you need to configure Docker Desktop, reset the Docker context to default, and update your Docker config to avoid credential store issues.
 sidebar:
-  order: 1
+  order: 0
 ---
 
 import {Aside} from '@astrojs/starlight/components';
@@ -109,7 +109,7 @@ Remember to save and close the file.
 
 ## 4. Test the Setup
 
-To verify everything is configured correctly, try [deploying an application](/docs/guides/onboarding-a-docker-app/) through Distr.
+To verify everything is configured correctly, try [creating a deployment](/docs/guides/create-deployment/) through Distr.
 If there are no errors related to Docker socket access, your setup is good to go.
 
 ---
