--- a/src/content/docs/docs/guides/secrets.mdx
+++ b/src/content/docs/docs/guides/secrets.mdx
@@ -50,8 +50,8 @@ When the deployment is created, the template is automatically replaced with the 
 4. Click **Save**
 
 <Aside type="tip">
-  Use descriptive names for your secret keys that clearly indicate their purpose,
-  such as `API_KEY_GITHUB` or `DATABASE_PASSWORD_PROD`.
+  Use descriptive names for your secret keys that clearly indicate their
+  purpose, such as `API_KEY_GITHUB` or `DATABASE_PASSWORD_PROD`.
 </Aside>
 
 ### Updating a Secret
@@ -101,15 +101,15 @@ For Kubernetes deployments, reference secrets in your Helm values:
 ```yaml
 database:
   host: db.example.com
-  password: {{ .Secrets.DB_PASSWORD }}
+  password: {{.Secrets.DB_PASSWORD}}
 
 api:
   credentials:
     username: admin
-    password: {{ .Secrets.ADMIN_PASSWORD }}
+    password: {{.Secrets.ADMIN_PASSWORD}}
 
 config:
-  githubToken: {{ .Secrets.GITHUB_TOKEN }}
+  githubToken: {{.Secrets.GITHUB_TOKEN}}
 ```
 
 ## Template Syntax
@@ -157,12 +157,14 @@ Secret keys must follow these rules:
 - Cannot contain spaces or special characters (except underscore)
 
 **Valid examples**:
+
 - `API_KEY`
 - `database_password`
 - `GitHubToken123`
 - `stripe_api_key_prod`
 
 **Invalid examples**:
+
 - `_API_KEY` (starts with underscore)
 - `123_KEY` (starts with number)
 - `API-KEY` (contains hyphen)
@@ -240,6 +242,6 @@ Check your template syntax for missing braces, quotes, or other syntax issues.
 ### Empty Secret Values
 
 <Aside type="caution">
-  Secret values cannot be empty. If you need to represent an empty value, consider
-  using a placeholder string or removing the secret reference entirely.
+  Secret values cannot be empty. If you need to represent an empty value,
+  consider using a placeholder string or removing the secret reference entirely.
 </Aside>
