feat: add automatic deployment guide
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -25,6 +25,12 @@ Configure your applications and customize the deployment experience:
 - **[Configure Application Links](/docs/guides/application-links/)** - Create dynamic links to deployed applications using template variables
 - **[Configuring Helm Charts for Distr](/docs/guides/helm-chart-registry-auth/)** - Set up authenticated image pulls with imagePullSecrets
 
+## Automation & CI/CD
+
+Automate your deployment pipeline with continuous integration and delivery:
+
+- **[Automatic Deployments from GitHub](/docs/guides/automatic-deployments-from-github/)** - Automatically create versions and update all customer deployments on every release
+
 ## Customer Management
 
 Manage customer access and their deployment experience:
