--- a/src/content/docs/docs/guides/application.mdx
+++ b/src/content/docs/docs/guides/application.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create Application
+title: Create a Application
 description: Learn how to create Docker and Helm applications in Distr, add versions, and manage your application templates.
 sidebar:
   order: 1
