--- a/src/content/docs/docs/guides/deployment.mdx
+++ b/src/content/docs/docs/guides/deployment.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create Deployment
+title: Create a Deployment
 description: Learn how to create deployments for Docker and Helm applications, including the updated deployment flow with customer selection and license management.
 sidebar:
   order: 2
@@ -147,7 +147,7 @@ This will show you the same flow as above, where you can select your application
 
 ## Related Guides
 
-- [Create Application](/docs/guides/application/) - Learn how to create Docker and Helm applications
+- [Create a Application](/docs/guides/application/) - Learn how to create Docker and Helm applications
 - [Application Licenses](/docs/guides/application-licenses/) - Control which applications customers can access
 - [Docker Environment Variables](/docs/guides/docker-env-var-template/) - Configure environment variable templates
 - [Helm Chart Registry Auth](/docs/guides/helm-chart-registry-auth/) - Set up authenticated image pulls
