--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -341,8 +341,8 @@ The Applications section provides vendors with a dedicated space to configure an
 
 For detailed instructions on adding applications to Distr, see our platform management guides:
 
-- [Create Application](/docs/guides/application/) - Create Docker and Helm applications
-- [Create Deployment](/docs/guides/deployment/) - Deploy applications to customer environments
+- [Create a Application](/docs/guides/application/) - Create Docker and Helm applications
+- [Create a Deployment](/docs/guides/deployment/) - Deploy applications to customer environments
 
 ### Deployments
 
