--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -14,7 +14,7 @@ Start with these essential guides to set up your first applications and customer
 
 - **[Run Distr on macOS](/docs/guides/distr-on-macos/)** - Configure Docker Desktop for Distr on macOS
 - **[Create Application](/docs/guides/application/)** - Create Docker and Helm applications, add versions, and manage application templates
-- **[Create Deployment](/docs/guides/deployment/)** - Deploy applications to customer environments using the updated deployment flow
+- **[Create a Deployment](/docs/guides/deployment/)** - Deploy applications to customer environments using the updated deployment flow
 - **[Onboarding a New Customer](/docs/product/rbac/#inviting-customer-organization-users)** - Create customer accounts and grant access to your software
 - **[How to Set Up and Use the Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
 
