--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -41,7 +41,7 @@ This is especially useful in setups where a platform team deploys the applicatio
 
 {/* steps can't be indented due to prettier */}
 
-1. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
+1. Create Your [Application](/docs/guides/application/)
 2. (Optional) Set Up Your [Registry](/docs/guides/container-registry/)
 3. White-label the [Customer portal](/docs/product/branding/)
 4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
