--- a/src/content/docs/docs/guides/docker-env-var-template.mdx
+++ b/src/content/docs/docs/guides/docker-env-var-template.mdx
@@ -17,7 +17,7 @@ import threeJson from './docker-env-multi-service/three.json?raw';
 Distr allows users to define environment variable templates for Docker applications.
 Users can configure and customize environment variables before deploying an application.
 
-In this guide, builds on top the [onboard a Docker application](/docs/guides/onboarding-a-docker-app/) and explains the
+In this guide, builds on top the [create a Docker application](/docs/guides/application/) and explains the
 environment variable templates in more detail.
 
 ## What is an Environment Variable Template?
