chore: reorder existing guides due to new amount of guides
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/advanced/secrets.mdx
+++ b/src/content/docs/docs/guides/advanced/secrets.mdx
@@ -1,6 +1,7 @@
 ---
 title: Manage Secrets
 description: Securely store and reference sensitive configuration values in deployments using Distr's secret management system.
+slug: docs/guides/secrets
 sidebar:
   order: 9
 ---
