--- a/src/content/docs/docs/guides/configuration/application-links.mdx
+++ b/src/content/docs/docs/guides/configuration/application-links.mdx
@@ -1,6 +1,7 @@
 ---
 title: Configure Application Links
 description: Create dynamic links to deployed applications using environment variables and Helm values as template variables.
+slug: docs/guides/application-links
 sidebar:
   order: 8
 ---
