--- a/src/content/docs/docs/guides/customer-management/application-licenses.mdx
+++ b/src/content/docs/docs/guides/customer-management/application-licenses.mdx
@@ -1,6 +1,7 @@
 ---
 title: Application Licenses
 description: Learn how to create and manage Application Licenses to control which application versions your customers can access and deploy.
+slug: docs/guides/application-licenses
 sidebar:
   order: 5
 ---
@@ -20,7 +21,7 @@ With Application Licenses, you can link a license to a customer, allowing access
 
 ## License flow diagram
 
-![license-diagram](../../../../assets/docs/guides/license-diagram.png)
+![license-diagram](../../../../../assets/docs/guides/license-diagram.png)
 
 <Aside type="note">
   The diagram above illustrates how a license links an end-customer account to a
@@ -57,14 +58,14 @@ If you don't see the feature yet, make sure you're on a Pro plan or Pro Trial. O
 
 The customer can now access and deploy the assigned application version/s directly from their [customer portal](/docs/product/customer-portal/).
 
-![license-form](../../../../assets/docs/guides/license-form.png)
+![license-form](../../../../../assets/docs/guides/license-form.png)
 
 ## OCI registry authentication
 
 If your images are stored in a private [OCI registry](/glossary/oci-container-artifact-registry/), you'll need to provide access credentials. You can configure these credentials in the lower section of the license configuration panel. Once set, the application versions will be available at the deployment target for as long as the license is valid.
 
-![OCI-registry-auth](../../../../assets/docs/guides/OCI-Registry-auth.png)
+![OCI-registry-auth](../../../../../assets/docs/guides/OCI-Registry-auth.png)
 
 ## Licensing walkthrough video
 
-[![Watch the video](../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
+[![Watch the video](../../../../../assets/docs/guides/license-thumbnail.png)](https://www.youtube.com/watch?v=qh-ewkWxRj4)
