--- a/src/content/docs/docs/guides/customer-management/artifact-licenses.mdx
+++ b/src/content/docs/docs/guides/customer-management/artifact-licenses.mdx
@@ -1,6 +1,7 @@
 ---
 title: Artifact Licenses
 description: Learn how to create and manage Artifact Licenses to control which artifacts and tags your customers can access in your registry.
+slug: docs/guides/artifact-licenses
 sidebar:
   order: 6
 ---
