--- a/src/content/docs/docs/guides/getting-started/application.mdx
+++ b/src/content/docs/docs/guides/getting-started/application.mdx
@@ -1,6 +1,7 @@
 ---
 title: Create a Application
 description: Learn how to create Docker and Helm applications in Distr, add versions, and manage your application templates.
+slug: docs/guides/application
 sidebar:
   order: 1
 ---
@@ -29,12 +30,12 @@ In the Distr web interface, navigate to the **Applications** section in the side
 
 You will be asked to enter a name and select the type of the application:
 
-![Add application](../../../../assets/docs/guides/docker_add_application.png)
+![Add application](../../../../../assets/docs/guides/docker_add_application.png)
 
 After you have clicked on the **Create Application** button, you will be redirected to the detailed view of this application.
 In this view you can manage the versions of the application.
 
-![Application Detail View](../../../../assets/docs/guides/docker_add_application.png)
+![Application Detail View](../../../../../assets/docs/guides/docker_add_application.png)
 
 ### Creating a first version
 
@@ -47,7 +48,7 @@ You can optionally add a template for the environment variables that your Docker
 The template will be shown to the user when they deploy this version to a deployment environment.
 In this example we enter a reminder for the user to set the database password, as the deployment would fail otherwise.
 
-![Add version](../../../../assets/docs/guides/docker_add_version.png)
+![Add version](../../../../../assets/docs/guides/docker_add_version.png)
 
 Click on the **Create New Version** button to add the version to your Docker App.
 
@@ -55,7 +56,7 @@ Click on the **Create New Version** button to add the version to your Docker App
 
 After you have created the version, you can see it in the list of versions:
 
-![Version list](../../../../assets/docs/guides/docker_manage_versions_copy.png)
+![Version list](../../../../../assets/docs/guides/docker_manage_versions_copy.png)
 
 You can use the **Copy from** button to create a new version based on the existing one.
 
@@ -78,7 +79,7 @@ In the Distr web interface, navigate to the **Applications** section in the side
 
 You will be asked to enter a name. Change the type of the application **Kubernetes**:
 
-![Add application](../../../../assets/docs/guides/kubernetes_create.png)
+![Add application](../../../../../assets/docs/guides/kubernetes_create.png)
 
 After you have clicked on the **Create** button, the list of applications will show your new app.
 
@@ -88,7 +89,7 @@ To add a new version to your Helm App, click on the **Manage versions** button i
 
 A modal will open where you can add a new version by entering a name and the corresponding data about the Helm chart:
 
-![Add version](../../../../assets/docs/guides/kubernetes_version.png)
+![Add version](../../../../../assets/docs/guides/kubernetes_version.png)
 
 **Base Values and Template**
 
@@ -106,7 +107,7 @@ Click on the **Create** button to add the version to your Helm App.
 
 After you have created the version, you can see it in the list of versions:
 
-![Version list](../../../../assets/docs/guides/kubernetes_version_manage.png)
+![Version list](../../../../../assets/docs/guides/kubernetes_version_manage.png)
 
 You can use the **Copy from** button to create a new version based on the existing one.
 
