--- a/src/content/docs/docs/guides/getting-started/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/getting-started/distr-on-macos.mdx
@@ -1,6 +1,7 @@
 ---
 title: Run Distr Agents on macOS
 description: To run Distr on macOS, you need to configure Docker Desktop, reset the Docker context to default, and update your Docker config to avoid credential store issues.
+slug: docs/guides/distr-on-macos
 sidebar:
   order: 0
 ---
