--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -16,7 +16,7 @@ Start with these essential guides to set up your first applications and customer
 - **[Create Application](/docs/guides/application/)** - Create Docker and Helm applications, add versions, and manage application templates
 - **[Create a Deployment](/docs/guides/deployment/)** - Deploy applications to customer environments using the updated deployment flow
 - **[Onboarding a New Customer](/docs/product/rbac/#inviting-customer-organization-users)** - Create customer accounts and grant access to your software
-- **[How to Set Up and Use the Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
+- **[Container Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
 
 ## Configuration & Customization
 
