--- a/src/content/docs/docs/guides/getting-started/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/getting-started/how-to-registry.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to set up and use the Registry
+title: Container Registry
 description: Set up your registry, push your first artifact, and start distributing your software to customers with fine-grained access control.
 slug: docs/guides/container-registry
 sidebar:
