chore: rename air gapped envs to air gapped deployments
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -1,6 +1,7 @@
 ---
-title: Air-Gapped Environments
+title: Air-Gapped Deployments
 description: Deploy your software to highly secure environments with no internet access using physical media transfers or IP whitelisting.
+slug: docs/use-cases/air-gapped-deployments
 sidebar:
   order: 4
 ---
@@ -10,7 +11,7 @@ import ThemedImage from '~/components/util/ThemedImage.astro';
 import airgappedLight from '~/assets/docs/use-cases/airgapped/airgapped-light.png';
 import airgappedDark from '~/assets/docs/use-cases/airgapped/airgapped-dark.png';
 
-Distr supports [air-gapped](/glossary/air-gapped-meaning/) environments where strict security requirements demand physical or logical isolation from public networks.
+Distr supports [air-gapped](/glossary/air-gapped-meaning/) deployments where strict security requirements demand physical or logical isolation from public networks.
 This deployment model is ideal for organizations in regulated industries, such as defense, finance, and critical infrastructure,
 where external connectivity or the use of agents is not permitted.
 
