chore: streamline naming
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -1,5 +1,5 @@
 ---
-title: Assisted Self-Managed Deployment
+title: Assisted Self-Managed Deployments
 description: Distr agents assist by running in end-customer environments, they pull application updates, apply configuration changes, report deployment statuses and authenticate automatically to the Distr registry, without granting vendor access to the target environment.
 sidebar:
   order: 2
