--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -1,5 +1,5 @@
 ---
-title: Fully Self-Managed Deployment
+title: Fully Self-Managed Deployments
 description: In fully self-managed deployments, customers use access tokens to pull artifacts directly from Distr’s private OCI-compliant registry, with a built-in UI in the Customer Portal that displays all available artifacts, no agents or external dependencies required.
 sidebar:
   order: 1
